Last fixes before branch tag