@@ -1,12 +1,16 @@
 package com.qa.mobilecore.discovery;
 
+import com.qa.common.api.config.ConfigLoaderHolder;
 import com.qa.common.api.logging.TestLogger;
+import com.qa.mobilecore.config.MobileConfigKeys;
 import com.qa.mobilecore.model.DeviceDescriptor;
 import com.qa.mobilecore.model.DeviceType;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
@@ -20,7 +24,8 @@ import java.util.concurrent.TimeUnit;
  *   <li>Emuladores en ejecución (serial {@code emulator-XXXX})</li>
  * </ul>
  *
- * <p><b>Prerequisitos:</b> Android SDK instalado y {@code adb} en el PATH del sistema.
+ * <p><b>Prerequisitos:</b> Android SDK instalado y {@code adb} en el PATH del sistema,
+ * o bien la ruta al binario configurada en {@link com.qa.mobilecore.config.MobileConfigKeys#ADB_PATH}.
  *
  * <p><b>Formato de salida de ADB:</b>
  * <pre>
@@ -36,7 +41,6 @@ import java.util.concurrent.TimeUnit;
  */
 public class AdbDeviceScanner {
 
-    private static final String ADB_DEVICES_CMD = "adb devices -l";
     private static final int TIMEOUT_SEC = 10;
 
     /**
@@ -73,11 +77,19 @@ public class AdbDeviceScanner {
 
     /**
      * Verifica si ADB está disponible en el sistema.
+     *
+     * <p>El binario se resuelve vía {@link MobileConfigKeys#ADB_PATH}; si no está
+     * configurado se usa la resolución por {@code $PATH}. Una ruta configurada pero
+     * no ejecutable se reporta como warning y el escaneo se omite (skip elegante).
      */
     public boolean isAdbAvailable() {
         try {
-            Process p = Runtime.getRuntime().exec(new String[]{"adb", "version"});
+            String adb = resolveBinary(MobileConfigKeys.ADB_PATH, "adb");
+            Process p = Runtime.getRuntime().exec(new String[]{adb, "version"});
             return p.waitFor(3, TimeUnit.SECONDS) && p.exitValue() == 0;
+        } catch (IllegalStateException e) {
+            TestLogger.logWarning("ADB_SCANNER", e.getMessage(), null);
+            return false;
         } catch (Exception e) {
             return false;
         }
@@ -90,9 +102,10 @@ public class AdbDeviceScanner {
     private List<String> runAdbDevices() {
         List<String> lines = new ArrayList<>();
         try {
-            Process process = Runtime.getRuntime().exec(
-                isWindows() ? new String[]{"cmd", "/c", ADB_DEVICES_CMD}
-                            : new String[]{"sh", "-c", ADB_DEVICES_CMD});
+            String adb = resolveBinary(MobileConfigKeys.ADB_PATH, "adb");
+            // Direct exec (no shell): Runtime.exec resolves a bare "adb" via $PATH, and a
+            // configured absolute path is used verbatim (handles paths with spaces safely).
+            Process process = Runtime.getRuntime().exec(new String[]{adb, "devices", "-l"});
 
             if (!process.waitFor(TIMEOUT_SEC, TimeUnit.SECONDS)) {
                 process.destroyForcibly();
@@ -163,7 +176,28 @@ public class AdbDeviceScanner {
         return end < 0 ? line.substring(start) : line.substring(start, end);
     }
 
-    private boolean isWindows() {
-        return System.getProperty("os.name", "").toLowerCase().contains("win");
+    /**
+     * Resuelve la ruta del binario externo a partir de una clave de configuración.
+     *
+     * <p>Si {@code configKey} está definido con un valor no vacío, debe apuntar a un
+     * archivo ejecutable o se lanza {@link IllegalStateException} (fail-fast ante
+     * mala configuración). Si está ausente/vacío, retorna {@code defaultName} para
+     * que aplique la resolución por {@code $PATH} (comportamiento retrocompatible).
+     *
+     * @param configKey   clave de config (p.ej. {@link MobileConfigKeys#ADB_PATH})
+     * @param defaultName nombre del binario para el fallback por {@code $PATH}
+     * @return ruta absoluta configurada, o {@code defaultName} para lookup por {@code $PATH}
+     * @throws IllegalStateException si la clave está definida pero la ruta no es ejecutable
+     */
+    static String resolveBinary(String configKey, String defaultName) {
+        String configured = ConfigLoaderHolder.get().getRaw(configKey).orElse(null);
+        if (configured != null && !configured.isBlank()) {
+            if (!Files.isExecutable(Paths.get(configured))) {
+                throw new IllegalStateException(
+                    configKey + " set but not executable: " + configured);
+            }
+            return configured;
+        }
+        return defaultName;
     }
 }
